hphp/hack/test/typecheck/re_prefixed_string/prefixed_string_in_constants.php
<?hh

class MyClass {
  const HH\Lib\Regex\Pattern<shape(...)> PATTERN = re'/[a-z]+/';
  const HH\Lib\Regex\Pattern<shape('x' => string, ...)> NAMED =
    re'/(?P<x>[a-z]+)/';
}
